# Twente-Robotic-Courses-web-scraper

./: .gitignore  README.md  Robotic Courses.xlsx  pyproject.toml  table.csv
src/robotic_courses_web_scraper/: app.py  cli.py
src/robotic_courses_web_scraper/web_scraping_methods/: __init__.py  advance.py  precise.py  simple.py
